--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node_website",
   "main": "hello.js",
   "scripts": {
+    "start": "node hello.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
